2011-09-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove old param mechanism.

	* src/gsad.c (init_validator): Add login command and caller rule.
	(free_gchar_array, struct req_parms, append_chunk_string)
	(append_chunk_binary): Remove.
	(struct gsad_connection_info): Add cookie.  Was in struct req_parms.
	(free_resources): Remove req_parms, add cookie.
	(serve_post): Remove old param inits.
	(ELSE, ELSE_OAP): Get cmd from new params.
	(exec_omp_post): Get all params from new mechanism.
	(exec_omp_get): Remove old param inits.  Get package_format from new
	params.
	(request_handler): Use new cookie location.  Get text from new params.

2011-09-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Convert last pages to new param mechanism.

	* src/gsad.c (exec_omp_get): Pass single param instead of many.

	* src/gsad_oap.c (get_user_oap, get_users_oap, get_feed_oap): Replace
	multiple args with one.

	* src/gsad_omp.c (get_nvts_omp, get_target_omp, get_targets_omp)
	(get_configs_omp, get_trash_omp): Replace multiple args with one.

	* src/gsad_omp.h, src/gsad_oap.h: Update headers accordingly.

	* src/html/oap.xsl (user): Match param name to validator.

2011-09-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Convert more pages to new param mechanism.

	* src/gsad.c (exec_omp_get): Pass single param instead of many.

	* src/gsad_omp.c (get_slave_omp, get_slaves_omp, get_schedule_omp)
	(get_schedules_omp, get_system_reports_omp, get_report_format_omp)
	(get_report_formats_omp): Replace multiple args with one.

	* src/gsad_omp.h: Update headers accordingly.

2011-09-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Convert more pages to new param mechanism.

	* src/gsad.c (exec_omp_get): Pass single param instead of many.

	* src/gsad_omp.c (get_result): New function.  Body from get_result_omp.
	(get_result_omp): Call through to get_result.  Update callers to call
	get_result.
	(get_notes_omp, get_overrides_omp): Add params arg.
